--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,108 @@
-// Feel free to change the styles in this file as you wish.
+$white: #fff;
+$dark-gray: #444;
 
-$color: #fff;
-$bg: #fe4a49;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: sans-serif;
-  background: $bg;
-  color: $color;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+button {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  text-align: center;
+  border: 1px solid #babfc3;
+  padding: 7px 16px;
+  min-height: 36px;
+  min-width: 36px;
+  color: #202223;
+  background: #ffffff;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 14px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 0px;
+}
+
+button:hover {
+  background: #f6f6f7;
+  outline: 1px solid transparent;
+}
+
+.input {
+  width: 100%;
+  height: 36px;
+  border-radius: 4px;
+  padding-left: 12px;
+  font-size: 14px;
+  font-weight: normal;
+  border: 1px solid rgb(137, 151, 155);
+  transition: border-color 150ms ease-in-out 0s;
+  outline: none;
+  color: rgb(33, 49, 60);
+  background-color: rgb(255, 255, 255);
+  padding-right: 12px;
+  :hover {
+    box-shadow: rgb(231 238 236) 0px 0px 0px 3px;
+  }
+}
+
+.title {
+  font-size: 40px;
+  color: $dark-gray;
+}
+
+table {
+  border-spacing: 0;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+th,
+td {
+  padding: 5px 7px;
+  text-align: left;
+}
+
+.p-3 {
+  padding: 3rem 3rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-half {
+  width: 50%;
+}
+
+.flex {
   display: flex;
-  justify-content: center;
-  align-items: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.text-right {
+  text-align: end;
 }
