--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -26,11 +26,11 @@ button {
   min-height: 36px;
   min-width: 36px;
   color: #202223;
-  background: #ffffff;
+  background: #fff;
   border-radius: 4px;
   font-weight: 500;
   font-size: 14px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 0px;
+  box-shadow: rgb(0 0 0 / 5%) 0 1px 0 0;
 }
 
 button:hover {
@@ -45,14 +45,15 @@ button:hover {
   padding-left: 12px;
   font-size: 14px;
   font-weight: normal;
-  border: 1px solid rgb(137, 151, 155);
+  border: 1px solid rgb(137 151 155);
   transition: border-color 150ms ease-in-out 0s;
   outline: none;
-  color: rgb(33, 49, 60);
-  background-color: rgb(255, 255, 255);
+  color: rgb(33 49 60);
+  background-color: rgb(255 255 255);
   padding-right: 12px;
+
   :hover {
-    box-shadow: rgb(231 238 236) 0px 0px 0px 3px;
+    box-shadow: rgb(231 238 236) 0 0 0 3px;
   }
 }
 
@@ -76,7 +77,7 @@ td {
 }
 
 .p-3 {
-  padding: 3rem 3rem;
+  padding: 3rem;
 }
 
 .mb-1 {
