--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -38,6 +38,10 @@ button:hover {
   outline: 1px solid transparent;
 }
 
+table {
+  border: 1px solid #444;
+}
+
 .input {
   width: 100%;
   height: 36px;
