--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -80,6 +80,33 @@ td {
   text-align: left;
 }
 
+@media screen and (max-width: 1024px) {
+  .title {
+    font-size: 30px;
+  }
+
+  #app {
+    padding: 1rem;
+  }
+
+  .content {
+    flex-wrap: wrap;
+  }
+
+  .content > div {
+    padding: 1rem !important;
+    width: 100%;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  .mb-3 {
+    margin-bottom: 1rem !important;
+  }
+}
+
 .p-3 {
   padding: 3rem;
 }
